Fix track ordinal being misplaced on playlist/alltracks view when the track title wraps to multiple lines
This was unintended consequence of the commit b54a1d416a

--- a/css/style-playlist.css
+++ b/css/style-playlist.css
@@ -38,6 +38,10 @@
 	display: table;
 }
 
+.playlist-area .track-list > li span.muted {
+	vertical-align: top;
+}
+
 .playlist-area .track-list.insert-above > li.drag-hover {
 	border-top-color: LightGray;
 }
